fix: login auth token
